syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_update_user.proto";
import "google/api/annotations.proto";

option go_package = "github.com/bank_go/pb_sources";

service BankGo {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }  
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse){
        option (google.api.http) = {
            put: "/v1/users"
            body: "*"
        };
    }  
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    }  
}